--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/passport": "^11.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "nwidart/laravel-modules": "^10.0"
+        "nwidart/laravel-modules": "^10.0",
+        "spatie/laravel-translatable": "^6.5"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
